// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render a non-inline text element 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  display: block;
  font-size: 1rem;
}

<class_1
  inline={false}
>
  <Skeleton
    className=""
    inline={false}
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      inline={false}
      size="medium"
    >
      <styled.span
        inline={false}
        size="medium"
      >
        <span
          className="c0"
          size="medium"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render a skeleton element if skeletonOptions are passed to the component 1`] = `
<class_1
  skeletonOptions={
    Object {
      "shape": "line",
      "showSkeleton": true,
    }
  }
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": true,
      }
    }
  >
    <span
      className="Skeleton skeleton line skeleton-large"
      style={
        Object {
          "width": undefined,
        }
      }
    >
      ‌
    </span>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with heavy text 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  font-weight: 600;
  font-size: 1rem;
}

<class_1
  heavy={true}
>
  <Skeleton
    className=""
    heavy={true}
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      heavy={true}
      inline={true}
      size="medium"
    >
      <styled.span
        heavy={true}
        inline={true}
        size="medium"
      >
        <span
          className="c0"
          size="medium"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with large text 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  font-size: 1.125rem;
}

<class_1
  size="large"
>
  <Skeleton
    className=""
    size="large"
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      inline={true}
      size="large"
    >
      <styled.span
        inline={true}
        size="large"
      >
        <span
          className="c0"
          size="large"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with small text 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  font-size: .8125rem;
}

<class_1
  size="small"
>
  <Skeleton
    className=""
    size="small"
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      inline={true}
      size="small"
    >
      <styled.span
        inline={true}
        size="small"
      >
        <span
          className="c0"
          size="small"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with subtle text 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  color: hsl(210,13.4%,47.2%);
  font-size: 1rem;
}

<class_1
  subtle={true}
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
    subtle={true}
  >
    <TextComponent
      inline={true}
      size="medium"
      subtle={true}
    >
      <styled.span
        inline={true}
        size="medium"
        subtle={true}
      >
        <span
          className="c0"
          size="medium"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with text 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  font-size: 1rem;
}

<class_1>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
  >
    <TextComponent
      inline={true}
      size="medium"
    >
      <styled.span
        inline={true}
        size="medium"
      >
        <span
          className="c0"
          size="medium"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;

exports[`<Text /> should render an element with the text converted to uppercase 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  text-transform: uppercase;
  font-size: 1rem;
}

<class_1
  upper={true}
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
    upper={true}
  >
    <TextComponent
      inline={true}
      size="medium"
      upper={true}
    >
      <styled.span
        inline={true}
        size="medium"
        upper={true}
      >
        <span
          className="c0"
          size="medium"
        >
          Hello, world!
        </span>
      </styled.span>
    </TextComponent>
  </Skeleton>
</class_1>
`;
